[package]
name = "autd3-link-visualizer"
version = "26.0.0"
authors = ["shun suzuki <suzuki@hapis.k.u-tokyo.ac.jp>"]
edition = "2021"

license = "MIT"
description = "Link for visualizing the output of the AUTD3"
repository = "https://github.com/shinolab/autd3-link-visualizer"
readme = "README.md"
keywords = ["autd"]

[dependencies]
autd3-firmware-emulator = { version = "26.0.0" }
autd3-driver = { version = "26.0.0" }
thiserror = "1.0.30"
pyo3 = { version = "0.21.0", features = ["abi3", "auto-initialize"], optional = true }
which = { version = "6.0.0", optional = true }
itertools = "0.12.0"
vulkano = { version = "0.34.1", optional = true }
vulkano-shaders = { version = "0.34.0", optional = true }
plotters = { version = "0.3.5", optional = true }
scarlet = { version = "1.2.0", optional = true }
plotters-bitmap = { version = "0.3.3", optional = true }
num-complex = "0.4.3"

[dev-dependencies]
anyhow = "1.0.75"
autd3 = { version = "26.0.0" }
autd3-gain-holo = { version = "26.0.0" }
tokio = { version = "1.34.0", features = ["macros", "rt-multi-thread"] }

[features]
default = ["plotters"]
plotters = ["dep:plotters", "plotters-bitmap", "scarlet"]
python = ["pyo3", "which"]
gpu = ["vulkano", "vulkano-shaders"]
all = ["plotters", "python", "gpu"]
async-trait = ["autd3-driver/async-trait", "autd3-firmware-emulator/async-trait"]
